# proc_macros

./: .gitignore  MIT_License.md
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: _lib.rs  lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 03-accessors.rs  04-multiple-of-8bits.stderr  progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
custom_debug/: .gitignore  Cargo.toml
custom_debug/src/: lib.rs
custom_debug/tests/: progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 02-parse-body.rs  06-make-work-in-function.rs  07-init-array.rs  10-interaction-with-macrorules.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 02-not-enum.stderr  03-out-of-order.stderr  04-variants-with-data.rs  04-variants-with-data.stderr  06-pattern-path.stderr  07-unrecognized-pattern.stderr
