[package]
name = "seq"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
proc-macro2 = "1.0.10"
syn = {version = "1.0.17", features = ["extra-traits", "full", "visit-mut"]}
quote = "1.0.3"
